# mri-volumetry

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/mri_volumetry/: cli.py  config.py  io.py  logging_utils.py  metrics.py  pipeline.py  segment.py  tracking.py
src/mri_volumetry/data/: make_manifest.py
tests/: test_pipeline.py  test_smoke.py  test_tracking.py
