[project]
name = "mri-volumetry"
version = "0.1.0"
description = "MRI brain volumetry pipeline (T1) with reproducible ML engineering practices."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "nibabel>=5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
mri-volumetry = "mri_volumetry.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
